--- a/llama-play/pyproject.toml
+++ b/llama-play/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "ollama>=0.4.8",
     "sentencepiece>=0.2.0",
     "torch>=2.6.0",
     "transformers>=4.51.3",
